src/test/deca/syntax/invalid/HW/bracesMissing.deca
// Description:
//    Programme minimaliste oubliant les accollades
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 06/01/2022

        println("Hello");